--- a/assets/scss/_style.scss
+++ b/assets/scss/_style.scss
@@ -30,14 +30,14 @@ footer {
     min-height: 100vh;
     background-repeat: no-repeat;
     @include flex-hv-cntr;
-    background-image: url('../images/banner-bg.jpg');
+    background-image: url('../images/banner-bg.webp');
     background-size: cover;
 }
 
 .features {
     .cover-portion {
         height: 500px;
-        background-image: url('../images/features-bg.jpg');
+        background-image: url('../images/features-bg.webp');
         background-repeat: no-repeat;
         background-size: cover;
     }
@@ -93,7 +93,7 @@ footer {
     }
     .cover-portion {
         height: 750px;
-        background-image: url('../images/iot-bg.jpg');
+        background-image: url('../images/iot-bg.webp');
         background-repeat: no-repeat;
         background-size: cover;
         margin-top: -331px;
@@ -115,7 +115,7 @@ footer {
 .contact-us {
     .cover-portion {
         height: 750px;
-        background-image: url('../images/contact-bg.jpg');
+        background-image: url('../images/contact-bg.webp');
         background-repeat: no-repeat;
         background-size: cover;
         h2 {
@@ -134,18 +134,13 @@ footer {
         z-index: 2;
         position: relative;
     }
-    .col-xxl-8 {
-        width: 73% !important;
-    }
-    .col-xxl-4 {
-        width: 27% !important;
-    }
+    
 }
 
 .subscribe {
     .cover-portion {
         height: 450px;
-        background-image: url('../images/newsletter-bg.jpg');
+        background-image: url('../images/newsletter-bg.webp');
         background-repeat: no-repeat;
         background-size: cover;
     }
@@ -189,4 +184,9 @@ footer {
     .card-body {
         position: relative;
     }
+}
+
+.p-1px 
+{
+    margin: 1px !important;
 }
