--- a/assets/scss/theme.css
+++ b/assets/scss/theme.css
@@ -5602,12 +5602,13 @@ img {
   position: relative;
 }
 
+.modal {
+  z-index: 11111;
+}
+
 @media screen and (max-width: 767px) {
   .modal-header {
     padding: 40px 20px !important;
-  }
-  .modal-body {
-    padding: 20px 20px 0 20px !important;
   }
   .modal-footer {
     padding: 20px !important;
